     using `PRIuSIZE` and similar macros. They fell back to `"%zu"` when not
     provided otherwise, but not all platforms actually deliver these format
     characters. Now it is evaluated at `configure` time (to check that the
     characters may be used), and if not -- during `nut_stdint.h` parsing to
     fit known `int`/`long`/`long long` types. [#3300]

 - NUT for Windows specific updates:
   * Revised detection of (relative) paths to program and configuration files
     near the currently running program in NUT for Windows builds, including
     limited support for UNC paths (ignoring a localhost `\\?\` prefix).
     [issues #3207, #3063, #3065, #3219]
   * Augmented WIN32 `nut.exe` launcher with `status` and `restart` actions,
     and general ability to debug-log the activities during service management
     operations. (Re-)registration of the "Network UPS Tools" service should
     now populate a nice description of it. The `-U` (uninstall) action should
     now also try to stop the service first. [PR #3235]
   * Using `nut.exe -N` for testing and pressing 'Ctrl+C' should now cause the
     started daemons to be killed off. Previously they would linger and e.g.
     preclude subsequent experiments with the service wrapper. Console close
     events are ignored, so there is a way to indefinitely keep the daemons
     started by test-mode wrapper running (kill via Task Manager). [#3312]
   * Revised WIN32 `WSAStartup()` and registration of `atexit(WSACleanup)` to
     only be done once per program (and cleanups to be always registered); this
     impacts the C `libupsclient` and C++ `libnutclient` libraries (and so most
     NUT clients and tools which use the former, and `nutconf` which uses the
     latter), the `apcupsd` driver, `upsd` data server, and `nut-scanner` tool.
     [PR #3237]
   * Documented setup of Microsoft IIS to host the NUT CGI programs. [#3207]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,