@@ -2,7 +2,7 @@
 
    Copyright (C)
        2005 - 2015  Arnaud Quette <http://arnaud.quette.free.fr/contact.html>
-       2014 - 2025  Jim Klimov <jimklimov+nut@gmail.com>
+       2014 - 2026  Jim Klimov <jimklimov+nut@gmail.com>
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -48,7 +48,7 @@
 #include "dummy-ups.h"
 
 #define DRIVER_NAME	"Device simulation and repeater driver"
-#define DRIVER_VERSION	"0.23"
+#define DRIVER_VERSION	"0.24"
 
 /* driver description structure */
 upsdrv_info_t upsdrv_info =
@@ -415,6 +415,7 @@ static int instcmd(const char *cmdname, const char *extra)
 
 void upsdrv_help(void)
 {
+	upscli_report_build_details();
 }
 
 /* optionally tweak prognames[] entries */
